z-index fixed v2

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -427,7 +427,6 @@ header.principal {
     }
 
     &.focus {
-        z-index: 100;
         position: absolute;
         top: 10px;
         left: 2.5%;
